--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,16 +28,20 @@
             <div class="card-body">
                 <h5 class="card-title text-center">What would you like to do with your Gotchi?</h5>
                 <div class="list-group">
-                    <button data-health="{{dataValues.health}}" data-points="{{dataValues.hungry}}" data-id="{{dataValues.id}}" name="hungry" value=5 type="button"
+                    <button data-health="{{dataValues.health}}" data-points="{{dataValues.hungry}}" data-id="{{dataValues.id}}" data-column="hungry" type="button"
                     class="list-group-item list-group-item-action action-btn" id="feedBtn" data-toggle="modal"
-                        data-target="#modal">Food Supply</button>
-                    <button data-health="{{dataValues.health}}" data-points="{{dataValues.bored}}" data-id="{{dataValues.id}}" name="bored" value=15 type="button"
+                        data-target="#modal">Hunger Level: {{dataValues.hungry}} <small class="text-muted">(click to feed)</small></button>
+                    <button data-health="{{dataValues.health}}" data-points="{{dataValues.bored}}" data-id="{{dataValues.id}}" data-column="bored" type="button"
                         class="list-group-item list-group-item-action action-btn" id="entertainBtn" data-toggle="modal"
-                        data-target="#modal2">Entertain</button>
-                    <button data-health="{{dataValues.health}}" data-points="{{dataValues.lazy}}" data-id="{{dataValues.id}}" name="lazy" value=20 type="button"
+                        data-target="#modal2">Boredom Level: {{dataValues.bored}} <small class="text-muted">(click to entertain)</small></button>
+                    <button data-health="{{dataValues.health}}" data-points="{{dataValues.lazy}}" data-id="{{dataValues.id}}" data-column="lazy" type="button"
                         class="list-group-item list-group-item-action action-btn" id="exerciseBtn" data-toggle="modal"
-                        data-target="#modal3">Exercise</button>
+                        data-target="#modal3">Laziness Level: {{dataValues.lazy}} <small class="text-muted">(click to excercise)</small></button>
                 </div>
+                <hr>
+                <ul class="list-group">
+                    <li class="list-group-item text-dark">Health Level: {{dataValues.health}} <span id="healtNote"></span></li>
+                </ul>
             </div>
         </div>
         {{!-- Stats Card End --}}
@@ -48,13 +52,13 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Your Food Supply</h5>
+                        <h5 class="modal-title">You Fed Your Gotchi!</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Your Gotchi has <span id="hungry-points">{{dataValues.hungry}}</span> food remaining</p>
+                        <p>Your Gotchi now has <span id="hungry-points"></span> health points</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -69,13 +73,13 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">How bored is your Gotchi?</h5>
+                        <h5 class="modal-title">You entertained your Gotchi!</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Your Gotchi has <span id="bored-points">{{dataValues.bored}}</span> entertainment points</p>
+                        <p>Your Gotchi now has <span id="bored-points"></span> health points</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -97,7 +101,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Your Gotchi has <span id="lazy-points">{{dataValues.lazy}}</span> exercise points</p>
+                        <p>Your Gotchi now has <span id="lazy-points"></span> health points</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
